# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
day01/: __main__.py
day02/: __main__.py
day03/: __main__.py
day04/: __main__.py
day05/: __main__.py
day06/: __main__.py
day07/: __main__.py
day08/: __main__.py
day09/: __main__.py
day10/: __main__.py
day11/: __main__.py
day12/: __main__.py
day13/: __main__.py
day14/: __main__.py
day15/: __main__.py
day16/: __main__.py
day17/: __main__.py
day18/: __main__.py
