[tool.poetry]
name = "aoc24"
version = "0.1.0"
description = ""
authors = ["Scott Odle <scott@sjodle.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aockit = "^1.0.2"
networkx = "^3.4.2"
matplotlib = "^3.9.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
